--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
                         android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
                         android:textColor="@color/colorPrimary" />
 
+
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -82,7 +83,7 @@
                         app:cardCornerRadius="24dp">
 
                         <LinearLayout
-                            android:id="@+id/openForm"
+                            android:id="@+id/openVhcForm"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:clickable="true"
@@ -104,7 +105,7 @@
                                     android:drawablePadding="12dp"
                                     android:gravity="center_vertical"
                                     android:minWidth="460dp"
-                                    android:text="OPEN NEW FORM"
+                                    android:text="OPEN NEW VHC FORM"
                                     android:textColor="@color/colorPrimary"
                                     android:textSize="16dp" />
 
@@ -113,7 +114,69 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="36dp"
                                     android:gravity="center_horizontal|center_vertical"
-                                    android:text="Open to enter new surveillance form"
+                                    android:text="Village Health Committee"
+                                    android:textColor="@color/gray"
+                                    android:textSize="14sp" />
+
+                            </LinearLayout>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="12dp"
+                                android:background="@drawable/ic_arrow_forward"
+                                android:gravity="center_horizontal|center_vertical"
+                                android:textColor="@color/colorAccent"
+                                android:textSize="24dp" />
+
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="55dp"
+                        android:layout_marginEnd="24dp"
+                        android:padding="12dp"
+                        app:cardCornerRadius="24dp">
+
+                        <LinearLayout
+                            android:id="@+id/openWsgForm"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:onClick="sectionPress"
+                            android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="12dp"
+                                android:layout_weight="1"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@color/white"
+                                    android:drawableStart="@drawable/new_form"
+                                    android:drawablePadding="12dp"
+                                    android:gravity="center_vertical"
+                                    android:minWidth="460dp"
+                                    android:text="OPEN NEW WSG FORM"
+                                    android:textColor="@color/colorPrimary"
+                                    android:textSize="16dp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="36dp"
+                                    android:gravity="center_horizontal|center_vertical"
+                                    android:text="Women Support Group"
                                     android:textColor="@color/gray"
                                     android:textSize="14sp" />
 
