SectionVHC3Activity sno

--- a/app/src/main/res/layout/activity_section_wsg2.xml
+++ b/app/src/main/res/layout/activity_section_wsg2.xml
@@ -78,6 +78,8 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:focusable="false"
+                            android:focusableInTouchMode="true"
                             android:gravity="center"
                             android:hint="YYYY-MM-DD"
                             android:text="@={wsgForm.ws201}"
@@ -117,6 +119,8 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:focusable="false"
+                            android:focusableInTouchMode="true"
                             android:hint="HH:mm"
                             android:gravity="center"
                             android:inputType="number"
