--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,9 +64,10 @@
 
                     <TextView
                         android:id="@+id/username"
+                        style="@style/TextAppearance.AppCompat.Headline"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="start"
+                        android:layout_gravity="center"
                         android:layout_margin="4dp"
                         android:padding="4dp"
                         android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Panel"
@@ -77,7 +78,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
-                        android:layout_marginTop="55dp"
+                        android:layout_marginTop="30dp"
                         android:layout_marginEnd="24dp"
                         android:padding="12dp"
                         app:cardCornerRadius="24dp">
@@ -139,7 +140,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
-                        android:layout_marginTop="55dp"
+                        android:layout_marginTop="30dp"
                         android:layout_marginEnd="24dp"
                         android:padding="12dp"
                         app:cardCornerRadius="24dp">
