--- a/app/src/main/res/layout/activity_section_vhc2.xml
+++ b/app/src/main/res/layout/activity_section_vhc2.xml
@@ -79,6 +79,8 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
+                                android:focusable="false"
+                                android:focusableInTouchMode="true"
                                 android:hint="YYYY-MM-DD"
                                 android:text="@={vhcForm.v201}"
                                 app:dateFormat="yyyy/MM/dd"
@@ -117,6 +119,8 @@
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
+                                android:focusable="false"
+                                android:focusableInTouchMode="true"
                                 android:hint="HH:mm"
                                 android:gravity="center"
                                 android:inputType="number"
