activity_section_wsg5.xml ws214_GONE

--- a/app/src/main/res/layout/activity_section_wsg5.xml
+++ b/app/src/main/res/layout/activity_section_wsg5.xml
@@ -594,7 +594,8 @@
                 <!-- ws510  Input   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws510"
-                    style="@style/cardView">
+                    style="@style/cardView"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="match_parent"
