--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -131,7 +131,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/greenLight"
-                        android:onClick="BtnEnd"
+                        android:onClick="btnEnd"
                         android:text="Save"
                         android:textColor="@color/white" />
 
