--- a/app/src/main/res/layout/activity_section_vhc3.xml
+++ b/app/src/main/res/layout/activity_section_vhc3.xml
@@ -475,6 +475,7 @@
                                 android:text="@string/Q_v307" />
 
                             <TextView
+                                android:id="@+id/tx307"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:text="@string/v307" />
