--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -199,7 +199,7 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="12dp"
                             android:layout_marginBottom="1dp"
-
+                            android:layout_gravity="center"
                             android:background="@color/whiteOverlay"
                             android:elevation="1dp"
                             android:gravity="center_horizontal"
