--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -24,7 +24,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-        <!-- CUSTOM TOOLBAR -->
+            <!-- CUSTOM TOOLBAR -->
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -47,25 +47,25 @@
                 android:shadowDx="2"
                 android:shadowDy="2"
                 android:shadowRadius="2"
-                android:visibility="gone"
                 android:text="DATA SYNC ACTIVITY"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorAccentLightOverlay"
-                android:padding="24dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="24dp">
 
 
                 <Button
                     android:id="@+id/btnSync"
                     style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:background="@color/colorPrimary"
                     android:elevation="2dp"
                     android:onClick="ProcessStart"
@@ -80,9 +80,9 @@
 
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="5dp"
                     android:layout_marginTop="15dp"
+                    android:layout_weight="1"
                     android:background="@color/colorPrimary"
                     android:elevation="2dp"
                     android:onClick="ProcessStart"
@@ -95,17 +95,17 @@
                     android:id="@+id/btnUploadPhotos"
                     style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
-
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:background="@color/colorPrimary"
                     android:elevation="2dp"
                     android:onClick="UploadPhotos"
                     android:padding="16dp"
                     android:text="Upload Photos"
                     android:textColor="@color/white"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
@@ -221,8 +221,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/grayLight"
-                            android:visibility="visible"
                             android:padding="12dp"
+                            android:visibility="visible"
                             tools:itemCount="4"
                             tools:listitem="@layout/sync_list_adapter">
 
