--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@color/white"
+                android:background="#d6ffffff"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:paddingTop="8dp">
@@ -50,17 +50,15 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_gravity="center"
-                    android:paddingTop="24dp"
                     android:src="@drawable/app_icon" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:padding="24dp"
                     android:text="@string/app_name"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="32dp"
+                    android:textSize="20dp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -202,16 +200,13 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_marginTop="16dp"
-                                android:layout_marginBottom="16dp"
-                                android:background="@drawable/action_button_dull"
                                 android:drawableStart="@drawable/ic_upload"
                                 android:drawablePadding="12dp"
-                                android:onClick="@{callback::onSyncDataClick}"
+                                android:onClick="onSyncDataClick"
                                 android:paddingStart="12dp"
                                 android:paddingEnd="12dp"
-                                android:text="Download User Data"
-                                android:textColor="@color/white" />
+                                android:text="Download Data"
+                                android:textSize="12dp" />
 
                             <!--android:onClick="@{callback::onSyncDataClick}"-->
 
