--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="callback"
-            type="edu.aku.hassannaqvi.chese.MainActivity" />
+            type="edu.aku.hassannaqvi.chese.ui.MainActivity" />
     </data>
 
     <LinearLayout
